# pixeml

./: .gitignore  dune-project
frontend/pixeml-frontend/: package-lock.json  package.json
frontend/pixeml-frontend/public/: index.html
frontend/pixeml-frontend/src/: App.tsx
frontend/pixeml-frontend/src/task-management/: TaskManagerList.css  TaskManagerList.tsx  TaskTypes.tsx
lib/: dune
test/: dune
