(lang dune 3.7)

(name pixeml)

(generate_opam_files true)

(source
 (github Nearos/pixeml))

(authors "Soren van den Berg")

(maintainers "Soren van den Berg")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name pixeml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
